--- a/package.json
+++ b/package.json
@@ -14,23 +14,30 @@
   "dependencies": {
     "@auth/core": "^0.34.1",
     "@auth/drizzle-adapter": "^1.4.1",
+    "@hello-pangea/dnd": "^16.6.0",
     "@hono/auth-js": "^1.0.8",
     "@hono/zod-validator": "^0.2.2",
     "@hookform/resolvers": "^3.6.0",
+    "@mux/mux-node": "^8.8.0",
+    "@mux/mux-player-react": "^2.9.1",
     "@neondatabase/serverless": "^0.9.4",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.1",
     "@tanstack/react-query": "^5.48.0",
+    "@tanstack/react-table": "^8.20.5",
+    "@uploadthing/react": "^6.8.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.22.7",
     "drizzle-orm": "^0.31.2",
@@ -42,16 +49,20 @@
     "next-themes": "^0.3.0",
     "query-string": "^9.0.0",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
     "react-use": "^17.5.0",
+    "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "stripe": "^16.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.13.3",
     "zod": "^3.23.8",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
