--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
@@ -34,15 +35,17 @@
     "@tanstack/react-query": "^5.48.0",
     "@tanstack/react-table": "^8.20.5",
     "@uploadthing/react": "^6.8.0",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "1.0.0",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.22.7",
     "drizzle-orm": "^0.31.2",
     "drizzle-zod": "^0.5.1",
     "hono": "^4.4.8",
+    "jotai": "^2.9.3",
     "lucide-react": "^0.397.0",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
