upload course image

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ GITHUB_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
+UPLOADTHING_SECRET=
+UPLOADTHING_APP_ID=
+
 NEXT_PUBLIC_APP_URL=
 STRIPE_API_KEY=
 STRIPE_WEBHOOK_SECRET=
+
+NEXT_PUBLIC_TEACHER_ID=
