--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-quill": "^2.0.0",
     "react-use": "^17.5.0",
     "recharts": "^2.12.7",
+    "resend": "^4.0.0",
     "sonner": "^1.5.0",
     "stripe": "^16.0.0",
     "tailwind-merge": "^2.3.0",
