--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@hookform/resolvers": "^3.6.0",
     "@mux/mux-node": "^8.8.0",
     "@mux/mux-player-react": "^2.9.1",
-    "@neondatabase/serverless": "^0.9.4",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -30,6 +29,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -50,6 +50,7 @@
     "hono": "^4.4.8",
     "jotai": "^2.9.3",
     "lucide-react": "^0.397.0",
+    "mysql2": "^3.6.5",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
@@ -64,6 +65,7 @@
     "recharts": "^2.12.7",
     "resend": "^4.0.0",
     "sonner": "^1.5.0",
+    "string_decoder": "^1.3.0",
     "stripe": "^16.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
