--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.1",
     "@tanstack/react-query": "^5.48.0",
     "@tanstack/react-table": "^8.20.5",
@@ -47,6 +48,8 @@
     "drizzle-kit": "^0.22.7",
     "drizzle-orm": "^0.31.2",
     "drizzle-zod": "^0.5.1",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "hono": "^4.4.8",
     "jotai": "^2.9.3",
     "lucide-react": "^0.397.0",
