--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -50,6 +51,7 @@
     "drizzle-zod": "^0.5.1",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.8",
     "hono": "^4.4.8",
     "jotai": "^2.9.3",
     "lucide-react": "^0.397.0",
