--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "drizzle-dbml-generator": "^0.9.0",
     "drizzle-kit": "^0.22.7",
@@ -65,8 +66,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
+    "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
-    "react-use": "^17.5.0",
+    "react-use": "^17.5.1",
     "recharts": "^2.12.7",
     "resend": "^4.0.0",
     "sonner": "^1.5.0",
