--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -70,7 +71,7 @@
     "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
     "react-use": "^17.5.1",
-    "recharts": "^2.12.7",
+    "recharts": "^2.13.0",
     "resend": "^4.0.0",
     "sonner": "^1.5.0",
     "string_decoder": "^1.3.0",
