--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db:studio": "bunx drizzle-kit studio",
     "db:push": "bunx drizzle-kit push",
     "db:generate": "bunx drizzle-kit generate",
-    "db:seed": "bun ./src/scripts/seed.ts"
+    "db:seed": "bun ./src/scripts/seed.ts",
+    "db:migrate": "bun ./src/scripts/migrate.ts"
   },
   "dependencies": {
     "@auth/core": "^0.34.1",
