--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "respotify",
+  "name": "knowflare",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,9 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:studio": "bunx drizzle-kit studio",
-    "db:push": "bunx drizzle-kit push",
-    "db:generate": "bunx drizzle-kit generate",
+    "db:studio": "npx drizzle-kit studio",
+    "db:push": "npx drizzle-kit push",
+    "db:generate": "npx drizzle-kit generate",
     "db:seed": "bun ./src/scripts/seed.ts",
     "db:migrate": "bun ./src/scripts/migrate.ts"
   },
