--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "query-string": "^9.0.0",
     "react": "^18",
     "react-confetti": "^6.1.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
