--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^3.7.15",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-confetti": "^6.1.0",
