--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.1",
+    "@react-email/components": "0.0.28",
     "@tanstack/react-query": "^5.48.0",
     "@tanstack/react-table": "^8.20.5",
     "@uploadthing/react": "^6.8.0",
