--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "form-data": "^4.0.1",
     "framer-motion": "^11.11.8",
     "hono": "^4.4.8",
+    "input-otp": "^1.4.1",
     "jotai": "^2.9.3",
     "lucide-react": "^0.397.0",
     "mysql2": "^3.6.5",
@@ -75,6 +76,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.1",
     "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
     "react-use": "^17.5.1",
