--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@auth/drizzle-adapter": "^1.4.1",
     "@hello-pangea/dnd": "^16.6.0",
     "@hono/auth-js": "^1.0.8",
+    "@hono/node-server": "^1.13.7",
     "@hono/zod-validator": "^0.2.2",
     "@hookform/resolvers": "^3.6.0",
     "@mux/mux-node": "^8.8.0",
@@ -82,6 +83,8 @@
     "react-use": "^17.5.1",
     "recharts": "^2.13.0",
     "resend": "^4.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "string_decoder": "^1.3.0",
     "stripe": "^16.0.0",
