--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@mux/mux-node": "^8.8.0",
     "@mux/mux-player-react": "^2.9.1",
+    "@neondatabase/serverless": "^0.10.4",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -69,6 +70,7 @@
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.7.15",
+    "pg": "^8.13.1",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-confetti": "^6.1.0",
@@ -97,6 +99,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
