--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@uploadthing/react": "^6.8.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "broadcast-channel": "^7.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
