--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
-AUTH_SECRET=
+AUTH_SECRET= # Added by `npx auth`. Read more: https://cli.authjs.dev
 
+DATABASE_HOST=
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASSWORD=
 DATABASE_URL=
+
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
@@ -8,13 +13,13 @@ GITHUB_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-UPLOADTHING_SECRET=
-UPLOADTHING_APP_ID=
-
 NEXT_PUBLIC_APP_URL=
+NEXT_PUBLIC_SERVER_URL=
+
 STRIPE_API_KEY=
 STRIPE_WEBHOOK_SECRET=
 
-RESEND_API_KEY=
+UPLOADTHING_SECRET=
+UPLOADTHING_APP_ID=
 
-NEXT_PUBLIC_TEACHER_ID=
+RESEND_API_KEY=
