move to nodemailer for email provider

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@react-email/components": "0.0.28",
     "@tanstack/react-query": "^5.48.0",
     "@tanstack/react-table": "^8.20.5",
+    "@types/nodemailer": "^6.4.17",
     "@uploadthing/react": "^6.8.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
@@ -71,6 +72,7 @@
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.7.15",
+    "nodemailer": "^7.0.3",
     "pg": "^8.13.1",
     "query-string": "^9.0.0",
     "react": "^18",
